...
    }
    //Текстовое поле для сообщений
    @Composable
    open fun TextLayer(f:()->Unit,text:String){
        Box(modifier = Modifier
            .fillMaxSize()
            .testTag("textSay"),contentAlignment = Alignment.Center){
            Card(modifier = Modifier
                .offset(0.dp, 40.dp)
                .border(BorderStroke(1.dp, Color.White))
                .clickable { f() },backgroundColor = Color.Black.copy(alpha = 0.7f)) {
                Text(text = text, color = Color.White, fontSize = 15.sp, modifier = Modifier.padding(10.dp))
            }
...
