...
                        contentScale = ContentScale.Crop,
                        modifier = Modifier
                            .size(80.dp)
                            .clip(CircleShape)
                            .padding(10.dp)
                            .clickable { signInWithGoogle() }
                            .testTag("login google")
                    )
                }
            }
        }
    }
    private fun authCheck(email_: String, password_: String): Boolean{
...
